# services/server/app/Services/VideoService.php
@@ -1,0 +1,40 @@
+<?php
+
+namespace App\services;
+
+use App\Enums\HTTP_Status;
+use App\Models\Video;
+use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Log;
+use Illuminate\Support\Facades\Storage;
+use Illuminate\Support\Str;
+
+
+class VideoService
+{
+    public function store($video): HTTP_Status|array
+    {
+        try {
+            DB::beginTransaction();
+            // $extension = $video->getClientOriginalExtension();
+            // $randomFileName = uniqid() . '_' . Str::random(10) . '.' . $extension;
+            // Storage::disk(config('filesystems.storage_service'))->put($randomFileName, file_get_contents($video));
+
+            // $mimeType = $video->getClientMimeType();
+
+            // $newVideo = Video::create([
+            //     'uuid' => Str::uuid(),
+            //     'file_path' => config('filesystems.storage_path') . "/" . $randomFileName,
+            //     'file_name' => $randomFileName,
+            //     'file_mime_type' => $mimeType,
+            // ]);
+            // DB::commit();
+
+            // return $newVideo->uuid;
+        } catch (\Exception $e) {
+            DB::rollBack();
+            Log::error($e->getMessage());
+            return HTTP_Status::ERROR;
+        }
+    }
+}
